--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@modelfusion/vercel-ai": "^1.1.0",
+    "ai": "^3.1.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "llamaindex": "^0.3.10",
     "lucide-react": "^0.378.0",
+    "modelfusion": "^0.137.0",
     "next": "14.2.3",
+    "pdfjs-dist": "^4.2.67",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
